--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   font-size: large;
 }
 
+.Header{
+  background-color: cornflowerblue;
+ 
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
